# search-rust

./: .gitignore  Cargo.toml  README.md  cd
src/: build.rs  custom_tree.rs  db.rs  embedding.rs  error.rs  main.rs  rank.rs  ui.rs
src/embedding/: cache.rs
src/rank/: embedding.rs
src/rank/embedding/: cache.rs
src/rank/embedding/cache/: db.rs
src/ui/: visual_pack.rs
