[package]
name = "search-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rusqlite = "*"
scan_dir = "*"
crossterm = "*"
dirs = "*"
rust-bert = { version="*", features=["download-libtorch"]}
rannoy = { git = "https://github.com/uzushino/rs-annoy" }
kdtree = "*"
dotext = "*"
rusqlite = { verstion="*", features=["bundled"] }